objects/Quality_Check_Question__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Choices__c</fullName>
        <label>Answer Choices</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Criticality__c</fullName>
        <label>Criticality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Non-Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Score__c</fullName>
        <label>Max Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality_Checks__c</fullName>
        <label>Quality Checks</label>
        <referenceTo>Quality_Checks__c</referenceTo>
        <relationshipLabel>Quality Check Questions</relationshipLabel>
        <relationshipName>Quality_Check_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question_Type_CC__c</fullName>
        <label>Question Type CC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Listing and Submission/Re-submission</fullName>
                </value>
                <value>
                    <fullName>Imports/Survey creation</fullName>
                </value>
                <value>
                    <fullName>CLI/LI</fullName>
                </value>
                <value>
                    <fullName>Graphics Upload</fullName>
                </value>
                <value>
                    <fullName>Mapping</fullName>
                </value>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>Download Numbers</fullName>
                </value>
                <value>
                    <fullName>Survey/Polling creation</fullName>
                </value>
                <value>
                    <fullName>HTML corrections</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <label>Quality Check Question</label>
    <nameField>
        <displayFormat>QC Ques-{00000000}</displayFormat>
        <label>Quality Check Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Check Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>